adding visualizer range control
